Fix scrolling issue for start a project dialog, change size on mobile

--- a/app/assets/stylesheets/services.scss
+++ b/app/assets/stylesheets/services.scss
@@ -23,14 +23,6 @@
   }
 }
 
-@media screen and (max-width: 600px){
-  .services-hub {
-    .md-subhead {
-      padding: 25px 10px;
-    }
-  }
-}
-
 .apparel-production-container,
 .apparel-patterning-container,
 .apparel-marking-grading-container,
@@ -38,6 +30,31 @@
 .apparel-cutting-container {
   font-size: 16px;
 }
+
+.start-project-dialog {
+  max-height: 100%;
+  height: 100%;
+  max-width: 70%;
+  width: 70%;
+}
+
+@media screen and (max-width: 600px){
+  .services-hub {
+    .md-subhead {
+      padding: 25px 10px;
+    }
+  }
+
+  .start-project-dialog {
+    max-height: 70%;
+    height: 70%;
+    max-width: 90%;
+    width: 90%
+  }
+
+}
+
+
 
 // Import all the other services scss
 @import 'apparel-cutting';
